--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Lunar</title>
-  </head>
+<html lang='en'>
 
-  <body>
-  </body>
-  
+<head>
+  <meta charset="UTF-8">
+  <title>Lunar</title>
+</head>
+
+<body>
+</body>
+
 </html>
