--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <base data-trunk-public-url />
   <title>Lunar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
+  <link data-trunk rel="scss" href="style.scss" />
 </head>
 
 <body>
