Replace assets locs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <base data-trunk-public-url />
   <title>Lunar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
-  <link data-trunk rel="copy-dir" href="img">
-  <link data-trunk rel="scss" href="style.scss" />
+  <link data-trunk rel="copy-dir" href="assets/img">
+  <link data-trunk rel="scss" href="assets/sass/style.scss" />
 </head>
 
 <body>
